# fastlmmclib

./: .flake8  .isort.cfg  README.md  pyproject.toml  setup.py  useful.bat
.github/workflows/: build_wheels.yml  ci.yml
fastlmmclib/qfc_src/: QFC.h  wrap_qfc.pyx
fastlmmclib/quadform/: __init__.py
fastlmmclib/quadform/qfc_src/: QFC.cpp  ThirdPartyNotices.txt  wrap_qfc.cpp  wrap_qfc.pyx
tests/: test.py
