[tool.isort]
profile = "black"
multi_line_output = 3
skip = "./.conda"

[tool.black]
line-length = 88

[tool.flake8]
exclude = "./.conda"

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython",
    "oldest-supported-numpy; python_version>='3.7'",
]

build-backend = "setuptools.build_meta"
